# starlet-starter

./: CMakeLists.txt  README.md
assets/scenes/: EmptyScene.txt
assets/shaders/: fragment_shader.glsl
src/: main.cpp
